--- a/src/app/features/base/components/dashboard/calendar/calendar.component.html
+++ b/src/app/features/base/components/dashboard/calendar/calendar.component.html
@@ -10,7 +10,7 @@
             (change)="fetchFilteredEvents()"
           >
             <option *ngFor="let range of dateRange" [value]="range" >
-              <span>{{ range | titlecase }}</span>
+              <span>{{ 'base.'+range | translate | titlecase }}</span>
             </option>
           </select>
         </div>
@@ -23,7 +23,7 @@
             id="gotoPrevNext"
           >
             <option *ngFor="let month of months" [value]="month">
-              <span>{{ month | titlecase }}</span>
+              <span>{{ 'base.'+month | translate | titlecase }}</span>
             </option>
           </select>
         </div>
@@ -44,7 +44,7 @@
             class="btn btn-sm create-event-button"
             (click)="activateCreateEvent('create')"
           >
-            Create Event
+            {{ 'base.create_event' | translate }}
           </button>
         </div>
       </div>
@@ -88,7 +88,7 @@
             </ng-container>
             <ng-template #noEvent>
               <div class="event">
-                <p>No event found for selected date.</p>
+                <p>{{ 'base.no_event_for_date' | translate }}</p>
               </div>
             </ng-template>
           </div>
@@ -141,7 +141,7 @@
             <div class="row">
               <div class="col-sm-12">
                 <div class="mb-3">
-                  <label for="organiser" class="form-label">Organiser</label>
+                  <label for="organiser" class="form-label">{{ 'base.organiser' | translate }}</label>
                   <input
                     type="text"
                     class="form-control"
@@ -150,7 +150,7 @@
                   >
                 </div>
                 <div class="mb-3">
-                  <label for="attendees" class="form-label">Attendees / Participants</label>
+                  <label for="attendees" class="form-label">{{ 'base.attendees_participants' | translate }}</label>
                   <textarea
                     class="form-control"
                     id="attendees"
@@ -164,7 +164,7 @@
           <div class="col-sm-8">
             <div class="row">
               <div class="col-sm-12 mb-3">
-                <label for="title" class="form-label">Title / Subject</label>
+                <label for="title" class="form-label">{{ 'base.title_subject' | translate }}</label>
                 <input
                   type="text"
                   class="form-control"
@@ -175,7 +175,7 @@
               <div class="col-sm-6">
                 <div class="row">
                   <div class="col-sm-12 mb-3">
-                    <label for="location" class="form-label">Location</label>
+                    <label for="location" class="form-label">{{ 'base.location' | translate }}</label>
                     <input
                       type="text"
                       class="form-control"
@@ -186,7 +186,7 @@
                 </div>
                 <div class="row mb-3">
                   <div class="col-sm-6 col-6">
-                    <label for="timeFrom" class="form-label">Time From</label>
+                    <label for="timeFrom" class="form-label">{{ 'base.time_from' | translate }}</label>
                     <select class="form-select" id="timeFrom" formControlName="fromDate" (click)="timeFromEvent($event)">
                       <option *ngFor="let time of slicedTimeFrom" [value]="time">
                         <span>{{ time | date: 'shortTime' }}</span>
@@ -194,7 +194,7 @@
                     </select>
                   </div>
                   <div class="col-sm-6 col-6">
-                    <label for="timeTo" class="form-label">Time To</label>
+                    <label for="timeTo" class="form-label">{{ 'base.time_to' | translate }}</label>
                     <select class="form-select" id="timeTo" formControlName="toDate">
                       <option *ngFor="let time of slicedTimeTo" [value]="time">
                         <span>{{ time | date: 'shortTime' }}</span>
@@ -204,7 +204,7 @@
                 </div>
                 <div class="row">
                   <div class="col-sm-12">
-                    <label for="status" class="form-label">Status</label>
+                    <label for="status" class="form-label">{{ 'base.status' | translate }}</label>
                     <input
                       type="text"
                       class="form-control"
@@ -216,7 +216,7 @@
               </div>
 
               <div class="col-sm-6">
-                <label for="details" class="form-label">Description / Details</label>
+                <label for="details" class="form-label">{{ 'base.description_details' | translate }}</label>
                 <textarea
                   class="form-control"
                   id="details"
@@ -233,7 +233,7 @@
               id="activateCreateEvent"
             >
             <i class="fa-solid fa-circle-arrow-left"></i>
-            Back
+            {{ 'base.back' | translate }}
             </button>
           </div>
           <div class="col-sm-2 col-6 offset-sm-8 text-end event-button">
@@ -243,8 +243,9 @@
               (click)="createEvent()"
               id="createEvent"
             >
-            <i class="fa-solid fa-floppy-disk"></i>
-            Save</button>
+              <i class="fa-solid fa-floppy-disk"></i>
+              {{ 'base.save' | translate }}
+            </button>
           </div>
         </div>
       </form>
