--- a/src/app/features/reports-v2/create-dashboard/create-dashboard.component.html
+++ b/src/app/features/reports-v2/create-dashboard/create-dashboard.component.html
@@ -82,7 +82,7 @@
             <div class="mb-3">
               <label for="dashboardName" class="form-label">
                 {{ 'report.dashboard_name' | translate }}<span class="text-danger">*</span></label>
-              <input type="text" class="form-control" id="dashboardName" formControlName="dashboardName">
+              <input type="text" class="form-control" id="dashboardName" formControlName="dashboardName" style="padding: 11px;">
             </div>
             <div class="col-sm-12 mb-3">
               <label class="form-label">{{ 'report.add_reports' | translate }}</label><br>
