--- a/src/app/features/base/components/header-sub-menu/header-sub-menu.component.html
+++ b/src/app/features/base/components/header-sub-menu/header-sub-menu.component.html
@@ -191,15 +191,15 @@
                   class="label-text"
                   (click)="dynamicSideBarMenu(accountSubMenuList[0])"
                 >
-                  Accounts</label
-                >
+                  {{ 'base.accounts' | translate }}
+                </label>
 
                 <label
                   for="top-right"
                   class="label-text"
                   (click)="navLink('/home/entity/new')"
-                  >New Entity <i class="fa-solid fa-plus"></i
-                ></label>
+                  >{{ 'base.new_entity' | translate }}
+                  <i class="fa-solid fa-plus"></i></label>
               </div>
               <div class="my-2"></div>
               <form [formGroup]="searchAccountForm">
@@ -208,7 +208,7 @@
                     class="col-3 d-flex justify-content-end align-items-center"
                   >
                     <label for="input1" class="form-label label-text"
-                    >Name:
+                    >{{ 'base.name' | translate }}:
                     </label>
                   </div>
                   <div class="col-9" style="padding: 0.5rem 0">
@@ -229,7 +229,7 @@
                   <div
                     class="col-3 d-flex justify-content-end align-items-center"
                   >
-                    <label for="input2" class="form-label label-text">ID: </label>
+                    <label for="input2" class="form-label label-text">{{ 'base.id' | translate }}: </label>
                   </div>
                   <div class="col-9" style="padding: 0.5rem 0">
                     <input
@@ -253,7 +253,9 @@
                   (click)="navLink('/home/entity/list')"
                   class="text-plain"
                   for="bottom-right"
-                  >View Entities</label
+                  >
+                    {{ 'base.view_entities' | translate }}
+                  </label
                 >
               </div>
 
@@ -289,8 +291,8 @@
                   class="label-text"
                   (click)="dynamicSideBarMenu(quotationSubMenuList[0])"
                 >
-                  Quotation</label
-                >
+                  {{ 'base.quotation' | translate }}
+                </label>
 
                 <label
                   data-bs-toggle="modal"
@@ -298,7 +300,9 @@
                   for="top-right"
                   class="label-text"
                   (click)="navLink('/home/lms/quotation/list')"
-                  >New Quotation <i class="fa-solid fa-plus"></i
+                >
+                  {{ 'base.new_quotation' | translate }}
+                  <i class="fa-solid fa-plus"></i
                 ></label>
               </div>
               <div class="my-2"></div>
@@ -306,7 +310,9 @@
                 <div
                   class="col-3 d-flex justify-content-start align-items-center"
                 >
-                  <label for="input2" class="form-label .label-text-without-pointer text-black fw-medium" style="font-size: 12px;">Pol. ID: </label>
+                  <label for="input2" class="form-label .label-text-without-pointer text-black fw-medium" style="font-size: 12px;">
+                    {{ 'base.policy_id' | translate }}: 
+                  </label>
                 </div>
                 <div class="col-9" style="padding: 0.5rem 0">
                   <input
@@ -325,7 +331,9 @@
                 <div
                   class="col-3 d-flex justify-content-start align-items-center"
                 >
-                  <label for="input2" class="form-label .label-text-without-pointer text-black fw-medium" style="font-size: 12px;">Quot. ID: </label>
+                  <label for="input2" class="form-label .label-text-without-pointer text-black fw-medium" style="font-size: 12px;">
+                    {{ 'base.quot_id' | translate }}: 
+                  </label>
                 </div>
                 <div class="col-9" style="padding: 0.5rem 0">
                   <input
@@ -346,7 +354,8 @@
                   (click)="navLink('/home/lms/quotation/list')"
                   class="text-plain"
                   for="bottom-right"
-                  >View Quotations</label
+                  >{{ 'base.view_quotations' | translate }}
+                  </label
                 >
               </div>
 
