--- a/src/app/features/reports-v2/create-report/create-report.component.css
+++ b/src/app/features/reports-v2/create-report/create-report.component.css
@@ -1,6 +1,5 @@
 :host ::ng-deep .p-dropdown {
   width: 100%;
-  border-radius: 0px;
   height: 40px;
   font-size: 1rem;
 }
@@ -109,12 +108,12 @@
   font-size: 0.6rem;
 }
 
-.modal-content {
+/* .modal-content {
   position: fixed;
   width: 400px;
   top: 150px;
   right: 200px;
-}
+} */
 
 .ai-bot-dialogue {
   width: 400px;
@@ -122,7 +121,6 @@
   border: solid 1px #d9d9d9;
   border-radius: 10px;
   margin: 10px;
-  /* padding: 10px; */
   position: absolute;
   right: 50px;
   z-index: 1000;
@@ -185,4 +183,15 @@
 
 .animate-flicker {
   animation: flickerAnimation 1s infinite;
+}
+
+
+
+/* resoponsiveness */
+@media (max-width: 576px) {
+  .ai-bot-dialogue {
+    width: 300px;
+    margin: auto;
+    top: 20px;
+  }
 }
