--- a/src/app/features/reports-v2/create-report/create-report.component.html
+++ b/src/app/features/reports-v2/create-report/create-report.component.html
@@ -147,116 +147,7 @@
             >
           </div>
 
-          
-          <div 
-            class="ai-bot-dialogue float-end bg-white"
-            [ngStyle]="{'visibility': (shouldShowChatBot === true) ? 'visible' : 'hidden' }"
-          >
-            <div class="bot-header">
-              <i class="fa-solid fa-robot"></i>
-              Turnquest AI <span style="font-size: 0.6rem;">Copilot</span>
-              <span class="float-end chat-icons">
-                <i class="fa fa-trash me-3" (click)="clearChat()"></i>
-                <i class="fa-solid fa-times" (click)="closeChatBox()" ></i>
-              </span>
-            </div>
-            <div class="bot-content p-2">
-              <p-scrollPanel [style]="{ width: '100%', height: '280px' }">                
-                <div *ngFor="let conversation of conversations">
-
-                  <div *ngIf="conversation.user==='bot'">
-                    <div class="chat-message">
-                      <div class="row">
-                        <div class="col-1" style="margin-right: 20px;">
-                          <span class="robot text-primary">
-                            <i class="fa-solid fa-robot"></i>
-                          </span>
-                        </div>
-                        <div class="col-9 col-sm-8 bot-message" [ngClass]="{'animate-flicker': conversation.message === 'loading...'}">
-                          <span>
-                            {{ conversation.message }}
-                          </span>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div *ngIf="conversation.user==='me'">
-                    <div class="chat-message">
-                      <div class="row">
-                        <div class="col-8 offset-4">
-                          <span class="float-end message">
-                            {{ conversation.message }}
-                          </span>
-                        </div>
-                        <!-- <div class="col-2">
-                          <span class="message">
-                            You
-                          </span>
-                        </div> -->
-                      </div>
-                    </div>
-                  </div>
-
-                  <!-- <div  
-                    class="chat-message mb-1" 
-                    [ngStyle]="conversation.user=='me'? {'float': 'right'} : {'clear': 'both'}"
-                  >
-                      <span *ngIf="conversation.user==='bot'" class="robot text-primary">
-                        <i class="fa-solid fa-robot"></i>
-                      </span> 
-                      <span 
-                        [ngClass]=
-                          "{
-                            'message': conversation.user === 'me', 
-                            'bot-message': conversation.user === 'bot', 
-                            'animate-flicker': conversation.message === 'loading...'
-                          }"
-                      >
-                        {{ conversation.message }}
-                      </span>
-                  </div> -->
-                </div>
-              </p-scrollPanel>
-            </div>
-            <div class="bot-footer">
-              <form [formGroup]="chatForm">
-
-                <div class="input-group mb-3">
-                  <input type="text" 
-                    class="form-control" 
-                    placeholder="Enter query" 
-                    formControlName="queryTerm"
-                    id="queryTerm"
-                    #queryTerm
-                  >
-                  <button class="btn btn-primary" (click)="getQueryResult()">
-                    <i class="pi pi-send"></i>
-                  </button>
-                </div>
-              </form>
-            </div>
-          </div>
-
-
-          <!-- AI Bot Modal -->
-          <!-- <div class="modal fade" id="aiBot" tabindex="-1" aria-labelledby="aiBotLabel" aria-hidden="true">
-            <div class="modal-dialog">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h1 class="modal-title fs-5" id="aiBotLabel">Modal title</h1>
-                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                  ...
-                </div>
-                <div class="modal-footer">
-                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                  <button type="button" class="btn btn-primary">Save changes</button>
-                </div>
-              </div>
-            </div>
-          </div> -->
+          <app-chat-bot></app-chat-bot>
 
           <ng-container *ngIf="isCriteriaButtonActive">
             <app-criteria
