--- a/src/app/features/auth/login/login.component.html
+++ b/src/app/features/auth/login/login.component.html
@@ -18,7 +18,7 @@
     <form [formGroup]='loginForm' novalidate>
       <div class="form-group mb-3" controlHasError controlRequiredAsterisk>
         <label for="emailAddress" class="form-label">{{ 'auth.email_address' | translate }}</label>
-        <input type="email" class="form-control" id="emailAddress" placeholder="{{ 'Email' }}" formControlName='username'>
+        <input type="email" class="form-control" id="emailAddress" formControlName='username'>
       </div>
       <div class="form-group mb-3" controlHasError controlRequiredAsterisk>
         <a class="text-muted float-end" routerLink="./forgot-password"><small>{{ 'auth.forgot_password' | translate }}</small></a>
@@ -28,7 +28,6 @@
             type="{{ showPassword ? 'text' : 'password' }}"
             class='form-control'
             id='password'
-            placeholder='Password'
             formControlName='password'
           />
           <div class="input-group-append" data-password="false">
