--- a/src/app/features/base/components/sidebar/sidebar.component.html
+++ b/src/app/features/base/components/sidebar/sidebar.component.html
@@ -11,7 +11,7 @@
             class="fa-solid fa-house"
             style="font-size: 15px; padding-right: 9px"
           ></i>
-          {{ "base.home" | translate }}
+          {{ "base.home" | translate }} 
         </span>
       </button>
     </li>
@@ -29,7 +29,7 @@
               class="{{ item.icon }}"
               style="font-size: 15px; padding-right: 9px"
             ></i>
-            {{ item.name | translate }}
+            {{ 'base.'+item.name | translate }}
           </span>
         </button>
         <div class="collapse sub-title" [id]="item.nameSlug">
@@ -43,7 +43,7 @@
                 (click)="clickURL(menuItem.link)"
                 class="link-dark rounded"
                 style="font-size: 12px"
-                >{{ menuItem.name | translate }}
+                >{{ 'base.'+menuItem.name | translate }}
 
                 <!-- <div class="collapse sub-title" >
                   <ul class="btn-toggle-nav list-unstyled pb-1">
