--- a/src/app/features/administration/components/tickets/view-tickets/view-tickets.component.css
+++ b/src/app/features/administration/components/tickets/view-tickets/view-tickets.component.css
@@ -9,9 +9,12 @@
   width: 100%;
 }
 :host ::ng-deep .p-datatable-thead {
-  font-size: 12px;
+  font-size: 14px;
 }
 :host ::ng-deep  .p-datatable-table {
   width: 100%;
-  font-size: 13px;
+  font-size: 14px;
+}
+:host ::ng-deep .p-datatable .p-datatable-tbody > tr > td {
+  padding: 10px 9px;
 }
